[package]
name = "disan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
cc = "*"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
colored = "2.1.0"
tree-sitter = "0.22.6"
tree-sitter-cpp = "0.22.1"
